# VirtualBox

./: README.md  build.gradle  gradlew.bat  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
base/: build.gradle  proguard-rules.pro
base/src/main/: AndroidManifest.xml
core/: README.md  build.gradle  proguard-rules.pro
core/src/main/: AndroidManifest.xml
core/src/main/aidl/android/accounts/: IAccountAuthenticator.aidl
core/src/main/cpp/: ArtMethod.cpp  ArtMethod.h  ArtMethodHandle.cpp  ArtMethodHandle.h  CMakeLists.txt  IoRedirect.cpp  IoRedirect.h  JniHook.cpp  JniHook.h  VirtualCore.cpp  VirtualCore.h  VmCore.cpp  VmCore.h  art.cpp  art.h
core/src/main/cpp/hook/: BaseHook.h  BaseHookHandle.h  FileSystemHookHandle.cpp  FileSystemHookHandle.h  JniHook.cpp  JniHook.h  LinuxHookHandle.cpp  LinuxHookHandle.h  ProcessHook.cpp  ProcessHook.h  TestHookHandle.cpp  TestHookHandle.h  UnixFileSystemHook.cpp  UnixFileSystemHook.h  VMClassLoaderHook.cpp  VMClassLoaderHook.h
core/src/main/cpp/utils/: JnIEnvRef.h  log.h  modifiers.h  reflect.cpp  reflect.h
core/src/main/res/values/: strings.xml
core/src/main/res/xml/: network_security_config.xml  vm_file_paths.xml
free-reflect/: build.gradle  proguard-rules.pro
free-reflect/src/main/: AndroidManifest.xml
free-reflect/src/main/cpp/: CMakeLists.txt  reflect.cpp
gradle/wrapper/: gradle-wrapper.properties
hook-processor/: build.gradle
nativelib/: build.gradle
nativelib/src/main/: AndroidManifest.xml
nativelib/src/main/cpp/: CMakeLists.txt  test.cpp
os-aidl-compile/: build.gradle
os-aidl-compile/src/main/: AndroidManifest.xml
os-aidl-compile/src/main/aidl/android/view/: MagnificationSpec.aidl
os-aidl-compile/src/main/java/android/view/: MagnificationSpec.java
os-compile/: build.gradle
os-compile/src/main/: AndroidManifest.xml
os-compile/src/main/java/android/app/: ActivityThread.java  LoadedApk.java
os-compile/src/main/java/android/graphics/: Compatibility.java
os-compile/src/main/java/android/os/: RemoteCallback.java  (+2 more)
os-reflect/: build.gradle
os-reflect/src/main/: AndroidManifest.xml
(+353 files in other folders)
